test/errors/stmt_try_bare_except_last.py
try:
    pass
except:
    pass
except Exception:
    pass
