test/errors/stmt_try_bare_except_last.py.expected
test/errors/stmt_try_bare_except_last.py:5 error: default `except` must be last
